<resources>
    <string name="app_name">Ejercicio_3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_a_logo_trivia_ingresa_tu_nombre_para_comenzar">Bienvenido a Logo Trivia, Ingresa tu nombre para comenzar</string>
    <string name="nombre">nombre</string>
    <string name="comenzar">Comenzar</string>
    <string name="pregunta_a_quien_pertenece_este_logo">Pregunta: ¿A quien pertenece este logo?</string>
    <string name="logo">logo</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="kfc">KFC</string>
    <string name="wathsapp">Wathsapp</string>
    <string name="elija_una_opcion">Elija una opcion</string>
    <string name="button">Button</string>
    <string name="enviar">Enviar</string>
    <string name="textresult">TextResult</string>
    <string name="la_respuesta_es">La respuesta es:</string>
    <string name="textview">TextView</string>
    <string name="intentalo_nuevamente">Intentalo nuevamente</string>
    <string name="a_quien_pertenece_el_logo">¿A quien pertenece el logo?</string>
</resources>