<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment" >

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="397dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:background="#25D366"
        android:text="@string/pregunta_a_quien_pertenece_este_logo"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="174dp"
        android:layout_height="177dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/whatsapp__1_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuestion"
        tools:ignore="ImageContrastCheck" />

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="211dp"
        android:layout_height="228dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOptions"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kfc"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wathsapp"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textOptions"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/elija_una_opcion"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnAsk"
        android:layout_width="135dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#25D366"
        android:text="@string/enviar"
        android:textColor="#616161"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/radGroup"
        app:layout_constraintStart_toStartOf="@+id/radGroup"
        app:layout_constraintTop_toBottomOf="@+id/radGroup"
        app:layout_constraintVertical_bias="0.075" />
</androidx.constraintlayout.widget.ConstraintLayout>