<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment" >

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="404dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="#25D366"
        android:text="@string/bienvenido_a_logo_trivia_ingresa_tu_nombre_para_comenzar"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="395dp"
        android:layout_height="63dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIntro" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#25D366"
        android:text="@string/comenzar"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.189" />
</androidx.constraintlayout.widget.ConstraintLayout>